product many2many supplier

--- a/first_module/views/product_view.xml
+++ b/first_module/views/product_view.xml
@@ -10,6 +10,7 @@
                     <field name="name"/>
                     <field name="price"/>
                     <field name="category_id"/>
+                    <field name="supplier_ids" widget="many2many_tags"/>
                     <field name="vat"/>
                     <field name="price_with_tax"/>
                     <field name="purchase_date"/>
@@ -28,6 +29,7 @@
                             <group>
                                 <field name="name" string="Product Name"/>
                                 <field name="category_id"/>
+                                <field name="supplier_ids" widget="many2many_tags"/>
                                 <field name="warranty"/>
 <!--                                <field name="active"/>-->
                             </group>
