--- a/first_module/views/employee_view.xml
+++ b/first_module/views/employee_view.xml
@@ -24,7 +24,7 @@
                         <button name="toggle_active" string="Archive" type="object" class="btn-primary" attrs = "{'invisible': [('active', '=', False)]}"/>
 <!--                        <button name="leave" string="Leave" type="object" states="0"/>-->
                         <button string="Leave" type="action" name="%(first_module.employee_leave_reason_action)d" states="1, 2, 3"/>
-<!--                        <button name="work" string="Work" type="object" states="1, 2, 3"/>-->
+                        <button name="work" string="Work" type="object" states="0"/>
                         <field name="state" widget="statusbar" />
                     </header>
                     <sheet>
