--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -44,7 +44,7 @@
         </record>
 
 
-        <menuitem id="customer_root_menu" name="Quản lý Customer" sequence="1"/>
+        <menuitem id="customer_root_menu" name="Bái tập 1 (Customer)" sequence="1"/>
         <menuitem id="customer_menu_1" name="Customer" parent = "bt1.customer_root_menu" action="bt1.customer_action_1" sequence="1"/>
 
 
