--- a/test1/views/employees_view.xml
+++ b/test1/views/employees_view.xml
@@ -43,7 +43,7 @@
         </record>
 
 
-        <menuitem id="employees_root_menu" name="Test1"  action="test_odoo.employees_action_1" sequence="1"/>
+        <menuitem id="employees_root_menu" name="Test1"  action="test1.employees_action_1" sequence="4"/>
 <!--        <menuitem id="employee_menu_1" name="Thông tin Employee" parent = "module_1.employee_root_menu" action="module_1.user_action_1" sequence="2"/>-->
 
 
