--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <record id="list_customer_by_order_action" model="ir.actions.act_window">
+            <field name="name">Products</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">customer</field>
+            <field name="view_mode">tree,form</field>
+            <field name="domain">[('category_id', '=', active_id)]</field>
+        </record>
+
         <record id="customer_tree_view" model="ir.ui.view">
             <field name="name">Customer Tree View</field>
             <field name="model">customer</field>
@@ -20,6 +28,12 @@
             <field name="arch" type="xml">
                 <form string="">
                     <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button class="oe_stat_button" type="action"
+                                    name="%(bt1.list_customer_by_order_action)d">
+                                <field name="customer_count" widget="statinfo"/>
+                            </button>
+                        </div>
                         <group>
                             <group>
                                 <field name="name"/>
