--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -28,12 +28,12 @@
             <field name="arch" type="xml">
                 <form string="">
                     <sheet>
-                        <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="action"
-                                    name="%(bt1.list_customer_by_order_action)d">
-                                <field name="customer_count" widget="statinfo"/>
-                            </button>
-                        </div>
+<!--                        <div class="oe_button_box" name="button_box">-->
+<!--                            <button class="oe_stat_button" type="action"-->
+<!--                                    name="%(bt1.list_customer_by_order_action)d">-->
+<!--                                <field name="customer_count" widget="statinfo"/>-->
+<!--                            </button>-->
+<!--                        </div>-->
                         <group>
                             <group>
                                 <field name="name"/>
