--- a/bt1/views/order_view.xml
+++ b/bt1/views/order_view.xml
@@ -31,12 +31,12 @@
                         <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
-                        <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="action"
-                                    name="%(bt1.list_customer_by_order_action)d">
-                                <field name="customer_count" widget="statinfo"/>
-                            </button>
-                        </div>
+<!--                        <div class="oe_button_box" name="button_box">-->
+<!--                            <button class="oe_stat_button" type="action"-->
+<!--                                    name="%(bt1.list_customer_by_order_action)d">-->
+<!--                                <field name="customer_count" widget="statinfo"/>-->
+<!--                            </button>-->
+<!--                        </div>-->
                         <group>
                             <group>
                                 <field name="order_date"/>
