--- a/bt1/views/order_view.xml
+++ b/bt1/views/order_view.xml
@@ -15,6 +15,7 @@
             <field name="arch" type="xml">
                 <tree string="">
                     <field name="order_date"/>
+                    <field name="state"/>
                     <field name="customer_id"/>
                     <field name="order_line_ids"/>
                 </tree>
@@ -27,7 +28,7 @@
             <field name="arch" type="xml">
                 <form string="">
                     <header>
-                        <button name="cancel_order" string="Cancel Order" type="object" class="btn-primary"  style="background-color:red;"/>
+                        <button name="cancel_order" string="Xử lý Order" type="object" class="btn-primary"  style="background-color:red;"/>
                         <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
