--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -28,11 +28,15 @@
             <field name="model">customer</field>
             <field name="arch" type="xml">
                 <form string="">
+                    <header>
+                        <button string="Order Count" type="action" name="%(bt1.order_count_action)d"/>
+<!--                        <field name="state" widget="statusbar"/>-->
+                    </header>
                     <sheet>
-                    <div class="oe_button_box" name="button_box">
+                        <div class="oe_button_box" name="button_box">
                             <button class="oe_stat_button" type="action"
                                     name="%(bt1.list_customer_by_order_action)d">
-                                <field name="customer_order_count" widget="statinfo"/>
+                            <field name="customer_order_count" widget="statinfo"/>
                             </button>
                         </div>
                         <group>
