Search panel cho product, ok

--- a/first_module/views/product_view.xml
+++ b/first_module/views/product_view.xml
@@ -46,6 +46,18 @@
             </field>
         </record>
 
+        <record id="product_searc_view" model="ir.ui.view">
+           <field name="name">Product Search</field>
+           <field name="model">product</field>
+            <field name="arch" type="xml">
+                <search string="">
+                    <field name="name"/>
+                    <field name="purchase_date"/>
+            </search>
+           </field>
+        </record>
+
+
         <record id="first_module_product_action" model="ir.actions.act_window">
             <field name="name">Products</field>
             <field name="type">ir.actions.act_window</field>
