--- a/first_module/views/product_view.xml
+++ b/first_module/views/product_view.xml
@@ -47,14 +47,19 @@
         </record>
 
         <record id="product_searc_view" model="ir.ui.view">
-           <field name="name">Product Search</field>
-           <field name="model">product</field>
+            <field name="name">Product Search</field>
+            <field name="model">product</field>
             <field name="arch" type="xml">
                 <search string="">
                     <field name="name"/>
                     <field name="purchase_date"/>
-            </search>
-           </field>
+                    <field name="category_id"/>
+                    <field name="supplier_ids"/>
+                    <group>
+                        <filter string="Group By Category" name ="group_category_id" context="{'group_by':'category_id'}"/>
+                    </group>
+                </search>
+            </field>
         </record>
 
 
