Tạo mối quan hệ 1-n giữa order_line vs products; ok

--- a/bt1/views/order_line_view.xml
+++ b/bt1/views/order_line_view.xml
@@ -23,6 +23,7 @@
                             <group>
                                 <field name="created_date"/>
                                 <field name="order_id"/>
+                                <field name="products_id"/>
                             </group>
                             <group>
                                 <field name="qty"/>
