--- a/bt1/views/products_view.xml
+++ b/bt1/views/products_view.xml
@@ -24,7 +24,7 @@
                             <group>
                                 <field name="name"/>
                                 <field name="description"/>
-
+                                <field name="order_line_ids"/>
                             </group>
                             <group>
                                 <field name="price"/>
