Phân quyền cho model wizard (count_order)

--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -48,6 +48,7 @@
                             <group>
                                 <field name="gender"/>
                                 <field name="add" attrs = "{'invisible': [('phone', '=', False)]}"/>
+<!--                                <field name="add" attrs = "{'required': [('phone', '!=', False)]}"/>-->
                             </group>
                         </group>
                     </sheet>
