--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -79,7 +79,7 @@
         </record>
 
 
-        <menuitem id="customer_root_menu" name="Bái tập 1 (Customer)" sequence="1"/>
+        <menuitem id="customer_root_menu" name="Bài tập 1 (Customer)" sequence="1"/>
         <menuitem id="customer_menu_1" name="Customer" parent = "bt1.customer_root_menu" action="bt1.customer_action_1" sequence="1"
         groups="bt1.group_customer_employees"
         />
