--- a/to_do_list_1/views/todolist_view.xml
+++ b/to_do_list_1/views/todolist_view.xml
@@ -6,8 +6,10 @@
             <field name="model">todolist</field>
             <field name="arch" type="xml">
                 <tree string="">
+                    <field name="ngay_batdau" />
                     <field name="name"/>
                     <field name="state"/>
+                    <field name="ketqua"/>
                     <field name="linhvuc"/>
                 </tree>
             </field>
@@ -21,8 +23,10 @@
                     <sheet>
                         <group>
                             <group>
+                                <field name="ngay_batdau" />
                                 <field name="name" />
                                 <field name="state" />
+                                <field name="ketqua"/>
                                 <field name="linhvuc" />
                             </group>
                         </group>
