--- a/thi/views/customer_view.xml
+++ b/thi/views/customer_view.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="todolist_tree_view" model="ir.ui.view">
+        <record id="customer1_tree_view" model="ir.ui.view">
             <field name="name">To_do_list Tree View</field>
-            <field name="model">todolist1</field>
+            <field name="model">customer1</field>
             <field name="arch" type="xml">
                 <tree string="">
                     <field name="name"/>
-                    <field name="state"/>
-                    <field name="linhvuc"/>
                 </tree>
             </field>
         </record>
 
-        <record id="todolist_form_view" model="ir.ui.view">
-            <field name="name">To_do_list Form View</field>
-            <field name="model">todolist1</field>
+        <record id="customer1_form_view" model="ir.ui.view">
+            <field name="name">Customer Form View</field>
+            <field name="model">customer1</field>
             <field name="arch" type="xml">
                 <form string="">
                     <sheet>
                         <group>
                             <group>
                                 <field name="name" />
-                                <field name="state" />
-                                <field name="linhvuc" />
                             </group>
                         </group>
                     </sheet>
@@ -32,13 +28,13 @@
         </record>
 
         <record id="thi_action_1" model="ir.actions.act_window">
-            <field name="name">To_do_list</field>
+            <field name="name">Customer1</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">todolist1</field>
+            <field name="res_model">customer1</field>
             <field name="view_mode">tree,form</field>
         </record>
 
-        <menuitem id="thi_root_menu" name="Menu Thi"  action="thi.thi_action_1" sequence="1"/>
+        <menuitem id="thi_root_menu" name="Menu Thi (Customer)"  action="thi.thi_action_1" sequence="1"/>
 
     </data>
 </odoo>
