--- a/thi/views/customer_view.xml
+++ b/thi/views/customer_view.xml
@@ -2,11 +2,14 @@
 <odoo>
     <data>
         <record id="customer1_tree_view" model="ir.ui.view">
-            <field name="name">To_do_list Tree View</field>
+            <field name="name">Customer1 Tree View</field>
             <field name="model">customer1</field>
             <field name="arch" type="xml">
                 <tree string="">
                     <field name="name"/>
+                    <field name="phone"/>
+                    <field name="address"/>
+                    <field name="gender"/>
                 </tree>
             </field>
         </record>
@@ -19,7 +22,12 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="name" />
+                                <field name="name"/>
+                                <field name="phone"/>
+                            </group>
+                            <group>
+                                <field name="address"/>
+                                <field name="gender"/>
                             </group>
                         </group>
                     </sheet>
@@ -27,14 +35,18 @@
             </field>
         </record>
 
-        <record id="thi_action_1" model="ir.actions.act_window">
+        <record id="customer_action_1" model="ir.actions.act_window">
             <field name="name">Customer1</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">customer1</field>
             <field name="view_mode">tree,form</field>
         </record>
 
-        <menuitem id="thi_root_menu" name="Menu Thi (Customer)"  action="thi.thi_action_1" sequence="1"/>
+        <menuitem id="customer_root_menu" name="Menu Thi (Customer)"  action="thi.customer_action_1" sequence="1"/>
+        <menuitem id="customer_menu_1" name="Customer" parent = "thi.customer_root_menu" action="thi.customer_action_1" sequence="1"
+        />
+
+
 
     </data>
 </odoo>
