--- a/thi/views/customer_view.xml
+++ b/thi/views/customer_view.xml
@@ -29,6 +29,11 @@
             <field name="arch" type="xml">
                 <form string="">
                     <sheet>
+                        <header>
+                            <button string="Total money of Order" type="action" name="%(thi.customer_total_money_action)d"
+                                    class="btn-primary"/>
+                            <!--                        <field name="state" widget="statusbar"/>-->
+                        </header>
                         <div class="oe_button_box" name="button_box">
                             <button class="oe_stat_button" type="action"
                                     name="%(thi.list_customer_by_order_action)d">
