Chỉ Hiển thị/hoặc Bắt buộc nhập address khi người dùng có nhập số phone

--- a/thi/views/customer_view.xml
+++ b/thi/views/customer_view.xml
@@ -47,7 +47,9 @@
                                 <field name="order_ids"/>
                             </group>
                             <group>
-                                <field name="address"/>
+                                <!--   <field name="address"/>-->
+                                <!--  <field name="add" attrs = "{'required': [('phone', '!=', False)]}"/>  -->
+                                <field name="address" attrs = "{'invisible': [('phone', '=', False)]}"/>
                                 <field name="gender"/>
                             </group>
                         </group>
