--- a/thi/views/customer_view.xml
+++ b/thi/views/customer_view.xml
@@ -67,6 +67,7 @@
 
         <menuitem id="customer_root_menu" name="Menu Thi (Customer)"  action="thi.customer_action_1" sequence="1"/>
         <menuitem id="customer_menu_1" name="Customer" parent = "thi.customer_root_menu" action="thi.customer_action_1" sequence="1"
+        groups="thi.group_customer_employee"
         />
 
 
