--- a/thi/views/order_line_view.xml
+++ b/thi/views/order_line_view.xml
@@ -8,6 +8,7 @@
                 <tree string="">
                     <field name="name"/>
                     <field name="created_date"/>
+                    <field name="product_id"/>
                     <field name="qty"/>
                     <field name="unit_price"/>
                     <field name="thanhtien"/>
@@ -25,6 +26,7 @@
                             <group>
                                 <field name="name"/>
                                 <field name="created_date"/>
+                                <field name="product_id"/>
                             </group>
                             <group>
                                 <field name="qty"/>
