--- a/thi/views/product_view.xml
+++ b/thi/views/product_view.xml
@@ -8,6 +8,7 @@
                 <tree string="">
                     <field name="name"/>
                     <field name="description"/>
+                    <field name="orderline_ids"/>
                     <field name="product_date"/>
                     <field name="product_price"/>
                 </tree>
@@ -24,6 +25,7 @@
                             <group>
                                 <field name="name"/>
                                 <field name="description"/>
+                                <field name="orderline_ids"/>
                             </group>
                             <group>
                                 <field name="product_date"/>
