--- a/thi_2/views/product_view.xml
+++ b/thi_2/views/product_view.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="product1_tree_view" model="ir.ui.view">
+        <record id="product2_tree_view" model="ir.ui.view">
             <field name="name">Product Tree View</field>
-            <field name="model">product1</field>
+            <field name="model">product2</field>
             <field name="arch" type="xml">
                 <tree string="">
                     <field name="name"/>
                     <field name="description"/>
-                    <field name="orderline_ids"/>
                     <field name="product_date"/>
                     <field name="product_price"/>
                 </tree>
             </field>
         </record>
 
-        <record id="product_form_view" model="ir.ui.view">
+        <record id="product2_form_view" model="ir.ui.view">
             <field name="name">Product Form View</field>
-            <field name="model">product1</field>
+            <field name="model">product2</field>
             <field name="arch" type="xml">
                 <form string="">
                     <sheet>
@@ -25,7 +24,6 @@
                             <group>
                                 <field name="name"/>
                                 <field name="description"/>
-                                <field name="orderline_ids"/>
                             </group>
                             <group>
                                 <field name="product_date"/>
@@ -37,14 +35,14 @@
             </field>
         </record>
 
-        <record id="product_action_1" model="ir.actions.act_window">
-            <field name="name">Product_1</field>
+        <record id="product2_action_1" model="ir.actions.act_window">
+            <field name="name">Product_2</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">product1</field>
+            <field name="res_model">product2</field>
             <field name="view_mode">tree,form</field>
         </record>
 
-        <menuitem id="product_menu_1" name="Product" parent = "thi.customer_root_menu" action="thi.product_action_1" sequence="3"
+        <menuitem id="product_menu_1" name="Product" parent = "thi_2.customer_root_menu" action="thi_2.product2_action_1" sequence="3"
         />
 
 
