Tạo xong mối quan hệ customer vs order là 1-nhiều

--- a/thi_2/views/customer_view.xml
+++ b/thi_2/views/customer_view.xml
@@ -8,6 +8,7 @@
                 <tree string="">
                     <field name="name"/>
                     <field name="phone"/>
+                    <field name="order_ids"/>
                     <field name="address"/>
                     <field name="gender"/>
                 </tree>
@@ -23,6 +24,7 @@
                             <group>
                                 <field name="name"/>
                                 <field name="phone"/>
+                                <field name="order_ids"/>
                             </group>
                             <group>
                                 <field name="address" attrs="{'invisible': [('phone', '=', False)]}"/>
