--- a/thi_2/views/order_view.xml
+++ b/thi_2/views/order_view.xml
@@ -8,6 +8,7 @@
                 <tree string="">
                     <field name="name"/>
                     <field name="order_date"/>
+                    <field name="customer_id"/>
                     <field name="state"/>
                 </tree>
             </field>
@@ -25,6 +26,7 @@
                                 <field name="order_date"/>
                             </group>
                             <group>
+                                <field name="customer_id"/>
                                 <field name="state"/>
                             </group>
                         </group>
