--- a/thi_2/views/order_line_view.xml
+++ b/thi_2/views/order_line_view.xml
@@ -8,6 +8,7 @@
                 <tree string="">
                     <field name="name"/>
                     <field name="created_date"/>
+                    <field name="order_id"/>
                     <field name="qty"/>
                     <field name="unit_price"/>
                 </tree>
@@ -24,6 +25,7 @@
                             <group>
                                 <field name="name"/>
                                 <field name="created_date"/>
+                                <field name="order_id"/>
                             </group>
                             <group>
                                 <field name="qty"/>
