--- a/thi_2/views/order_line_view.xml
+++ b/thi_2/views/order_line_view.xml
@@ -9,6 +9,7 @@
                     <field name="name"/>
                     <field name="created_date"/>
                     <field name="order_id"/>
+                    <field name="product_id"/>
                     <field name="qty"/>
                     <field name="unit_price"/>
                 </tree>
@@ -28,6 +29,7 @@
                                 <field name="order_id"/>
                             </group>
                             <group>
+                                <field name="product_id"/>
                                 <field name="qty"/>
                                 <field name="unit_price"/>
                             </group>
