Tạo button cancel -> chuyển trạng thái order sang draft

--- a/thi_2/views/order_view.xml
+++ b/thi_2/views/order_view.xml
@@ -20,9 +20,12 @@
             <field name="model">order2</field>
             <field name="arch" type="xml">
                 <form string="">
+                    <header>
+                        <button name="cancel_order" string="Cancel Order" type="object" class="btn-primary"/>
+                    </header>
                     <sheet>
                         <group>
-                            <group>
+                        <group>
                                 <field name="name"/>
                                 <field name="order_date"/>
                                 <field name="orderline_ids"/>
