--- a/thi_2/views/customer_view.xml
+++ b/thi_2/views/customer_view.xml
@@ -64,6 +64,7 @@
         <menuitem id="customer_root_menu" name="Menu Thi-2 (Customer)" action="thi_2.customer_action_1" sequence="1"/>
         <menuitem id="customer_menu_1" name="Customer" parent="thi_2.customer_root_menu" action="thi_2.customer_action_1"
                   sequence="1"
+                  groups="thi_2.group_customer_manager"
         />
 
         <record id="customer_search_view" model="ir.ui.view">
