--- a/bt1/views/customer_view.xml
+++ b/bt1/views/customer_view.xml
@@ -79,10 +79,14 @@
         </record>
 
 
-        <menuitem id="customer_root_menu" name="Bài tập 1 (Customer)" sequence="1"/>
+        <menuitem id="customer_root_menu" name="Bái tập 1 (Customer)" sequence="1"/>
+<!--        <menuitem id="customer_menu_1" name="Customer" parent = "bt1.customer_root_menu" action="bt1.customer_action_1" sequence="1"-->
+<!--        groups="bt1.group_customer_employees"-->
+<!--        />-->
         <menuitem id="customer_menu_1" name="Customer" parent = "bt1.customer_root_menu" action="bt1.customer_action_1" sequence="1"
-        groups="bt1.group_customer_employees"
         />
+
+
 
 
 <!--        <menuitem id="first_module_employee_menu" name="Employees" parent="first_module.first_module_root_menu"-->
